--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,10 @@
 {
     "name": "Eye Dropper",
-    "version": "0.1",
-    "manifest_version": 2,
     "description": "A browser extension to copy colors from your screen",
     "homepage_url": "https://github.com/captainbrosset/eye-dropper-ext/",
+    "author": "Patrick Brosset",
+    "version": "0.1",
+    "manifest_version": 2,
     "icons": {
         "16": "icons/icon16.png",
         "32": "icons/icon32.png",
