--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,14 +4,14 @@
     "homepage_url": "https://github.com/captainbrosset/eye-dropper-ext/",
     "author": "Patrick Brosset",
     "version": "0.1",
-    "manifest_version": 2,
+    "manifest_version": 3,
     "icons": {
         "16": "icons/icon16.png",
         "32": "icons/icon32.png",
         "48": "icons/icon48.png",
         "128": "icons/icon128.png"
     },
-    "browser_action": {
+    "action": {
         "default_icon": {
             "16": "icons/icon16.png",
             "32": "icons/icon32.png",
